--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>App Landy : Home</title>
+    <title>Acko Home</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
@@ -95,7 +95,7 @@
                     <div class="header-bottom-left">
                       <h1>Expose Your App with best way</h1>
                       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-                      
+                      //download-btn
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-6">
@@ -167,7 +167,7 @@
               <!-- Start features img -->
               <div class="col-md-4">
                 <div class="feature-img wow fadeInUp">
-                  <img src="assets/images/nexus-6-single.png" alt="iPhone mockup">
+                  <img src="assets/images/acko.png" alt="acko">
                 </div>
               </div>
               <!-- End features img -->
@@ -588,7 +588,7 @@
             <a href="#"><i class="fa fa-linkedin"></i></a>
           </div>
           <div class="footer-text">
-            <p>Designed by <a href="http://www.markups.io/">MarkUps.io</a></p>
+            <p>Designed by <a href="http://www.amfoss.in">amfoss-team</a></p>
           </div>
         </div>
       </div>
