changed a few pictures

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -101,7 +101,7 @@
                   <div class="col-md-6 col-sm-6">
                     <div class="header-bottom-right">
                       <!-- <img src="assets/images/iphone-group1.png" alt="iphone grpup img"> -->
-                      <img src="assets/images/Nexus-6-MockUp-group.png" alt="iphone grpup img">
+                      <img src="assets/images/insurance.jpg" alt="iphone grpup img">
                     </div>
                   </div>
                 </div>
