--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -135,29 +135,23 @@
                     <li class="wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
                       <i class="fa fa-desktop"></i>
                       <div class="features-content">
-                        <h4>Bootstrap 3.3</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Life Insurance</h4>
+                        <p>Life insurance can help you support your family even after retirement</p>
                       </div>
                     </li>
                     <li class="wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s">
                       <i class="fa fa-edit"></i>
                       <div class="features-content">
-                        <h4>Easy to Customize</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Motar Insurance</h4>
+                        <p>It’s precious—your car or bike. You paid lakhs of rupees to buy that beauty.</p>
                       </div>
                     </li>
-                    <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                      <i class="fa fa-object-ungroup"></i>
-                      <div class="features-content">
-                        <h4>Creative Design</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-                      </div>
-                    </li>
+                   
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-flask"></i>
                       <div class="features-content">
-                        <h4>Easy to Use</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Home Insurance</h4>
+                        <p>Home insurance is a cover that pays or compensates you for damage to your home due to natural calamities, man-made disasters or other threats. </p>
                       </div>
                     </li>
                   </ul>
@@ -175,32 +169,26 @@
               <div class="col-md-4">
                 <div class="features-right">
                   <ul class="features-list features-list-right">
-                    <li class="wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                      <i class="fa fa-rocket"></i>
-                      <div class="features-content">
-                        <h4>Premium Quality</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
-                      </div>
-                    </li>
+                   
                     <li class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay="0.75s">
                       <i class="fa fa-cogs"></i>
                       <div class="features-content">
-                        <h4>Different Colors</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Travel Insurance</h4>
+                        <p>A travel insurance compensates you or pays for any financial liabilities  during your travel abroad or within the country.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-heart"></i>
                       <div class="features-content">
-                        <h4>User Friendly</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Health Insurance</h4>
+                        <p>This type of general insurance covers the cost of medical care.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-support"></i>
                       <div class="features-content">
-                        <h4>24/7 Support</h4>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
+                        <h4>Fire Insurance</h4>
+                        <p>Fire insurance pays or compensates for the damages caused to your property or goods due to fire</p>
                       </div>
                     </li>
                   </ul>
