--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -93,9 +93,8 @@
                 <div class="row">
                   <div class="col-md-6 col-sm-6">
                     <div class="header-bottom-left">
-                      <h1>Expose Your App with best way</h1>
-                      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
-                      //download-btn
+                      <h1>Acko General Insurance</h1>
+                      <h3>Protect your Tomorrow</h3>
                     </div>
                   </div>
                   <div class="col-md-6 col-sm-6">
