--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -145,7 +145,7 @@
                         <p>It’s precious—your car or bike. You paid lakhs of rupees to buy that beauty.</p>
                       </div>
                     </li>
-                   
+
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
                       <i class="fa fa-flask"></i>
                       <div class="features-content">
@@ -168,7 +168,7 @@
               <div class="col-md-4">
                 <div class="features-right">
                   <ul class="features-list features-list-right">
-                   
+
                     <li class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay="0.75s">
                       <i class="fa fa-cogs"></i>
                       <div class="features-content">
@@ -226,113 +226,65 @@
   <!-- End how it works -->
 
   <!-- start pricing table -->
-  <section id="pricing-table">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-area wow fadeInLeft">
-            <h2 class="title">Pricing <span>Plans</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-          </div>
+<section id="statistic-table">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="title-area wow fadeInLeft">
+          <h2 class="title">acko <span>Statistic</span></h2>
+          <p>Acko 2017-18 Year Statistics</p>
         </div>
-        <div class="col-md-12">
-          <div class="pricing-table-content">
-            <div class="row">
-              <!-- Start single plan -->
-              <div class="col-md-3 col-sm-6">
-                <div class="single-plan wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                  <div class="single-plan-head">
-                    <h5>Startup</h5>
-                    <p>$20/<span>month</span></p>
-                  </div>
-                  <div class="single-plan-content">
-                    <ul>
-                      <li>5GB Space</li>
-                      <li>10GB Bandwidth</li>
-                      <li class="delete">15 Email Account</li>
-                      <li class="delete">Integration with WordPress</li>
-                      <li class="delete">Unlimited Support</li>
-                    </ul>
-                  </div>
-                  <div class="single-plan-bottom">
-                    <a class="signup-btn" href="http://mixdesigns.net">Sign Up</a>
-                  </div>
-                </div>
-              </div>
-              <!-- End single plan -->
-              <!-- Start single plan -->
-              <div class="col-md-3 col-sm-6">
-                <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                  <div class="single-plan-head">
-                    <h5>Pro</h5>
-                    <p>$35/<span>month</span></p>
-                  </div>
-                  <div class="single-plan-content">
-                    <ul>
-                      <li>5GB Space</li>
-                      <li>10GB Bandwidth</li>
-                      <li>15 Email Account</li>
-                      <li class="delete">Integration with WordPress</li>
-                      <li class="delete">Unlimited Support</li>
-                    </ul>
-                  </div>
-                  <div class="single-plan-bottom">
-                    <a class="signup-btn" href="#">Sign Up</a>
-                  </div>
-                </div>
-              </div>
-              <!-- End single plan -->
-              <!-- Start single plan -->
-              <div class="col-md-3 col-sm-6">
-                <div class="single-plan feature-price wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                  <div class="single-plan-head">
-                    <h5>Business</h5>
-                    <p>$50/<span>month</span></p>
-                  </div>
-                  <div class="single-plan-content">
-                    <ul>
-                      <li>5GB Space</li>
-                      <li>10GB Bandwidth</li>
-                      <li>15 Email Account</li>
-                      <li>Integration with WordPress</li>
-                      <li class="delete">Unlimited Support</li>
-                    </ul>
-                  </div>
-                  <div class="single-plan-bottom">
-                    <a class="signup-btn" href="#">Sign Up</a>
-                  </div>
-                </div>
-              </div>
-              <!-- End single plan -->
-              <!-- Start single plan -->
-              <div class="col-md-3 col-sm-6">
-                <div class="single-plan wow fadeInUp" data-wow-duration="1.25s" data-wow-delay="1.25s">
-                  <div class="single-plan-head">
-                    <h5>Advanced</h5>
-                    <p>$75/<span>month</span></p>
-                  </div>
-                  <div class="single-plan-content">
-                    <ul>
-                      <li>5GB Space</li>
-                      <li>10GB Bandwidth</li>
-                      <li>15 Email Account</li>
-                      <li>Integration with WordPress</li>
-                      <li>Unlimited Support</li>
-                    </ul>
-                  </div>
-                  <div class="single-plan-bottom">
-                    <a class="signup-btn" href="#">Sign Up</a>
-                  </div>
-                </div>
-              </div>
-              <!-- End single plan -->
-            </div>
-          </div>
+      </div>
+      <div class="col-md-12">
+        <div class="statistic-table-content">
+          <style>
+.button {
+border-radius: 4px;
+background-color: #f4511e;
+border: none;
+color: #FFFFFF;
+text-align: center;
+font-size: 28px;
+padding: 20px;
+width: 200px;
+transition: all 0.5s;
+cursor: pointer;
+margin: 5px;
+}
+
+.button span {
+cursor: pointer;
+display: inline-block;
+position: relative;
+transition: 0.5s;
+}
+
+.button span:after {
+content: '\00bb';
+position: absolute;
+opacity: 0;
+top: 0;
+right: -20px;
+transition: 0.5s;
+}
+
+.button:hover span {
+padding-right: 25px;
+}
+
+.button:hover span:after {
+opacity: 1;
+right: 0;
+}
+</style>
+          <button class="button"><span>Hover </span></button>
+
         </div>
       </div>
     </div>
-  </section>
-  <!-- End pricing table -->
+  </div>
+</section>
+<!-- End pricing table -->
 
   <!-- Start screenshot -->
   <section id="screenshot">
