--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -249,7 +249,8 @@ padding: 20px;
 width: 200px;
 transition: all 0.5s;
 cursor: pointer;
-margin: 5px;
+margin: auto;
+display: block;
 }
 
 .button span {
@@ -277,7 +278,9 @@ opacity: 1;
 right: 0;
 }
 </style>
-          <button class="button"><span>Click Here </span></button>
+
+        <a href = "stats.html" ><button class="button"><span>Click Here </span></button></a>
+          <form>
 
         </div>
       </div>
