--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -83,7 +83,7 @@
                     <!-- Image based logo -->
                     <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
                     <!-- Text based logo -->
-                    <!-- <a class="logo" href="index.html">App Landy.</a> -->
+                    <!-- <a class="logo" href="index.html">Acko.</a> -->
                   </div>
                   <!-- End logo area -->
                 </div>
@@ -455,6 +455,9 @@ right: 0;
         </div>
       </div>
     </div>
+    <form>
+<input type="button" value="Feedback Form" onclick="window.location.href='feedback.html'" />
+</form>
   </section>
   <!-- End testimonial -->
 
