--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -54,12 +54,11 @@
     <nav class="main-nav" id="main-menu">
       <span class="fa fa-remove" id="close"></span>
       <ul>
-        <li> <a href="#header"><i class="fa fa-home"></i><span>Home</span></a></li>
+        <li><a href="#header"><i class="fa fa-home"></i><span>Home</span></a></li>
         <li><a href="#features"><i class="fa fa-server"></i><span>Features</span></a></li>
         <li><a href="#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
-        <li><a href="#pricing-table"><i class="fa fa-usd"></i><span>Pricing</span></a></li>
-        <li><a href="#screenshot"><i class="fa fa-image"></i><span>Screenshots</span></a></li>
-        <li><a href="#download-app"><i class="fa fa-download"></i><span>Download</span></a></li>
+        <li><a href="#statis-table"><i class="fa fa-usd"></i><span>Statistic</span></a></li>
+        <li><a href="#insurance-table"><i class="fa fa-image"></i><span>insurance-table</span></a></li>
         <li><a href="#testimonial"><i class="fa fa-certificate"></i><span>Testimonials</span></a></li>
         <li><a href="#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
       </ul>
@@ -225,12 +224,14 @@
   </section>
   <!-- End how it works -->
 
-  <!-- start pricing table -->
+  <!-- start statistic-table table -->
 <section id="statistic-table">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="title-area wow fadeInLeft">
+          <h1></h1>
+          <h1></h1>
           <h2 class="title">acko <span>Statistic</span></h2>
           <p>Acko 2017-18 Year Statistics</p>
         </div>
@@ -280,6 +281,8 @@ right: 0;
 </style>
 
         <a href = "stats.html" ><button class="button"><span>Click Here </span></button></a>
+          <h1></h1>
+          <h1></h1>
           <form>
 
         </div>
@@ -287,136 +290,117 @@ right: 0;
     </div>
   </div>
 </section>
-<!-- End pricing table -->
 
-  <!-- Start screenshot -->
-  <section id="screenshot">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="title-area wow fadeInUp">
-            <h2 class="title">App <span>Screenshots</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-          </div>
+
+<section id="insurance-table">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="title-area wow fadeInLeft">
+          <h2 class="title">Insurance <span>Plans</span></h2>
+          <p>Risk is everywhere: When you drive your car to work, when you visit a new country, when you ride your bike to a nearby shop, when there’s a new bug going around in town.</p>
         </div>
-        <div class="col-md-12">
-          <div class="screenshots-area">
-            <ul class="screenshots-slide">
-              <li class="col-md-3 wow fadeInLeft">
-               <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                    <div class="view-btn-area">
-                      <span class="fa fa-search view-btn"></span>
-                    </div>
-                 </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-              <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-               <li class="col-md-3 wow fadeInLeft">
-                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/app-screenshot-popup.jpg"><img src="assets/images/app-screenshot.jpg" alt="app screenshot">
-                  <div class="view-btn-area">
-                    <span class="fa fa-search view-btn"></span>
-                  </div>
-               </a>
-              </li>
-            </ul>
+      </div>
+      <div class="col-md-12">
+        <div class="pricing-table-content">
+          <div class="row">
+            <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
+                <div class="single-plan-head">
+                  <h5>Health Insurance</h5>
+                  <p>Rs25,000/<span>Year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black">Your family health history</li>
+                    <li id="black">The sum assured</li>
+                    <li id="black">The type of coverage/plan</li>
+                    <li id="black">Your age and gender</li>
+                    <li id="black">Your health history</li>
+                  </ul>
+                </div>
+                <div class="single-plan-bottom">
+                  <a class="signup-btn" href="http://mixdesigns.net">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
+            <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
+                <div class="single-plan-head">
+                  <h5>Motor Insurance</h5>
+                  <p>5000/<span>year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black">Value of the Vehicle</li>
+                    <li id="black">Make-Model of the vehicle</li>
+                    <li id="black">The type of coverage/plan</li>
+                    <li id="black">The value, age of your vehicle</li>
+                    <li id="black">Your claim history</li>
+                  </ul>
+                </div>
+                <div class="single-plan-bottom">
+                  <a class="signup-btn" href="#">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
+            <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan feature-price wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                <div class="single-plan-head">
+                  <h5>Home Insurance</h5>
+                  <p>5000/<span>year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black">The size of your home</li>
+                    <li id="black">The type of coverage/plan</li>
+                    <li id="black">The age of your home and the systems installed therein</li>
+                    <li id="black">The location of your home</li>
+                    <li id="black">The sum assured</li>
+                  </ul>
+                </div>
+                <div class="single-plan-bottom">
+                  <a class="signup-btn" href="#">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
+            <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan wow fadeInUp" data-wow-duration="1.25s" data-wow-delay="1.25s">
+                <div class="single-plan-head">
+                  <h5>Fire Insurance</h5>
+                  <p>7500/<span>year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black">replacement,reconstruction,
+                    repair expenses</li>
+
+                    <li id="black">Valued policy</li>
+                    <li id="black">Floating policy</li>
+                    <li id="black">Comprehensive policy</li>
+                    <li id="black">Specific policy</li>
+                    <li id="black">Unlimited Support</li>
+                  </ul>
+                </div>
+                <div class="single-plan-bottom">
+                  <a class="signup-btn" href="#">Sign Up</a>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <!-- End screenshot -->
-
-  <!-- Start download app -->
-  <section id="download-app">
-    <div class="download-overlay">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="title-area wow fadeInUp">
-              <h2 class="title">Download <span>App</span></h2>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            </div>
-          </div>
-          <!-- Start download app content -->
-          <div class="col-md-12">
-            <div class="download-app-content">
-              <!-- Start single download -->
-              <a class="single-download wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s" href="#">
-                <div class="download-icon">
-                  <i class="fa fa-windows"></i>
-                </div>
-                <div class="download-content">
-                  <p>Available on the</p>
-                  <span>Windows Store</span>
-                </div>
-              </a>
-              <!-- Start single download -->
-              <a class="single-download wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s" href="#">
-                <div class="download-icon">
-                  <i class="fa fa-play"></i>
-                </div>
-                <div class="download-content">
-                  <p>Available on the</p>
-                  <span>Play Store</span>
-                </div>
-              </a>
-              <!-- Start single download -->
-              <a class="single-download wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s" href="#">
-                <div class="download-icon">
-                  <i class="fa fa-apple"></i>
-                </div>
-                <div class="download-content">
-                  <p>Available on the</p>
-                  <span>Apple Store</span>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End download app -->
+  </div>
+</section>
 
   <!-- Start testimonial -->
   <section id="testimonial">
@@ -457,33 +441,6 @@ right: 0;
     </div>
   </section>
   <!-- End testimonial -->
-
-  <!-- Start subscribe -->
-  <section id="subscribe">
-    <div class="download-overlay">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="title-area wow fadeInUp">
-              <h2 class="title">Subscribe Our <span>Newsletter</span></h2>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
-            </div>
-          </div>
-          <!-- Start download app content -->
-          <div class="col-md-12">
-            <div class="subscribe-content wow fadeInLeft">
-              <form action="" class="subcr-form">
-                <i class="fa fa-envelope-o"></i>
-                <input type="text" name="" id="" placeholder="Type your mail address..">
-                <button type="submit" class="subcr-btn">Subscribe</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End download app -->
 
   <!-- Start contact -->
   <section id="contact">
