--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -212,12 +212,10 @@
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
             </div>
           </div>
-          <div class="col-md-12">
-            <div class="howit-works-video">
-              <iframe src="https://player.vimeo.com/video/33790882" width="428" height="276" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            </div>
-          </div>
-          </div>
+          <div class="container">
+            <a href="https://biteable.com/watch/acko-2103031">
+              <img src="assets/images/macbook-pro.png" alt="image" style="width:428;height:276 align="middle"; padding-left: 300; ">
+            </a>
         </div>
       </div>
     </div>
@@ -440,7 +438,7 @@ right: 0;
       </div>
     </div>
     <form>
-<input type="button" value="Feedback Form" onclick="window.location.href='feedback.html'" />
+<input type="button" align="center" value="Feedback Form" onclick="window.location.href='feedback.html'" />
 </form>
   </section>
   <!-- End testimonial -->
