--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -80,7 +80,7 @@
                   <!-- Start logo area -->
                   <div class="logo-area">
                     <!-- Image based logo -->
-                    <a class="logo" href="index.html"><img src="assets/images/logo.png" alt="logo"></a>
+                    <a class="logo" href="index.html"><img src="assets/images/acko (1).jpg" alt="logo"></a>
                     <!-- Text based logo -->
                     <!-- <a class="logo" href="index.html">Acko.</a> -->
                   </div>
