Fa Fa elements changed

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -131,22 +131,22 @@
                 <div class="features-left">
                   <ul class="features-list features-list-left">
                     <li class="wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                      <i class="fa fa-desktop"></i>
+                      <i class="fa fa-user"></i>
                       <div class="features-content">
                         <h4>Life Insurance</h4>
                         <p>Life insurance can help you support your family even after retirement</p>
                       </div>
                     </li>
                     <li class="wow fadeInLeft" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                      <i class="fa fa-edit"></i>
+                      <i class="fa fa-car"></i>
                       <div class="features-content">
-                        <h4>Motar Insurance</h4>
+                        <h4>Motor Insurance</h4>
                         <p>It’s precious—your car or bike. You paid lakhs of rupees to buy that beauty.</p>
                       </div>
                     </li>
 
                     <li class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                      <i class="fa fa-flask"></i>
+                      <i class="fa fa-home"></i>
                       <div class="features-content">
                         <h4>Home Insurance</h4>
                         <p>Home insurance is a cover that pays or compensates you for damage to your home due to natural calamities, man-made disasters or other threats. </p>
@@ -169,21 +169,21 @@
                   <ul class="features-list features-list-right">
 
                     <li class="wow fadeInRight" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                      <i class="fa fa-cogs"></i>
+                      <i class="fa fa-taxi"></i>
                       <div class="features-content">
                         <h4>Travel Insurance</h4>
                         <p>A travel insurance compensates you or pays for any financial liabilities  during your travel abroad or within the country.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
-                      <i class="fa fa-heart"></i>
+                      <i class="fa fa-heartbeat"></i>
                       <div class="features-content">
                         <h4>Health Insurance</h4>
                         <p>This type of general insurance covers the cost of medical care.</p>
                       </div>
                     </li>
                     <li class="wow fadeInRight" data-wow-duration="1s" data-wow-delay="1s">
-                      <i class="fa fa-support"></i>
+                      <i class="fa fa-fire"></i>
                       <div class="features-content">
                         <h4>Fire Insurance</h4>
                         <p>Fire insurance pays or compensates for the damages caused to your property or goods due to fire</p>
