Customised the description

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -119,8 +119,8 @@
       <div class="row">
         <div class="col-md-12">
           <div class="title-area">
-            <h2 class="title">Awesome <span>Features</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+            <h2 class="title">Insurances <span>Covered</span></h2>
+            <p> ACKO provides you various types of insurances. Insurance policy in ACKO is very easy, affordable and Hassel-free for users and clients.</p>
           </div>
         </div>
         <div class="col-md-12">
@@ -209,7 +209,7 @@
           <div class="col-md-12">
             <div class="title-area wow fadeInLeft">
               <h2 class="title">How it <span>Works</span></h2>
-              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+              <p> ACKO provides you various types of insurances. ACKO is a easy, affordable and hassel-free insurance company to users and clients </p>
             </div>
           </div>
           <div class="container">
