--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -208,8 +208,8 @@
         <div class="row">
           <div class="col-md-12">
             <div class="title-area wow fadeInLeft">
-              <h2 class="title">How it <span>Works</span></h2>
-              <p> ACKO provides you various types of insurances. ACKO is a easy, affordable and hassel-free insurance company to users and clients </p>
+              <h2 class="title">About <span>Us</span></h2>
+              <p> ACKO provides you the Best prices, Terribly Convenient and Stress-Free claims</p>
             </div>
           </div>
           <div class="container">
@@ -230,7 +230,7 @@
         <div class="title-area wow fadeInLeft">
           <h1></h1>
           <h1></h1>
-          <h2 class="title">acko <span>Statistic</span></h2>
+          <h2 class="title">acko <span>Statistics</span></h2>
           <p>Acko 2017-18 Year Statistics</p>
         </div>
       </div>
