Customized the Clients feed back

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -407,31 +407,38 @@ right: 0;
         <div class="col-md-12">
           <div class="title-area wow fadeInLeft">
             <h2 class="title">Clients <span>Feedback</span></h2>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+            <p>For Complaints or Compliments. Drop your comments in the FeedBack Box</p>
           </div>
         </div>
         <div class="col-md-12">
           <div class="testimonial-slider">
             <!-- single slide -->
             <div class="testimonial-single-slide">
-              <img class="testi-avatar" src="assets/images/testi1.jpg" alt="testimonial img">
-              <p class="testi-name">Samantha</p>
-              <p class="testi-company">Google.com</p>
-              <p class="testi-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry ue ipsa quae ab illo inventore veritatis et quasi</p>
+              <img class="testi-avatar" src="assets/images/bhanu_prakash.jpg" alt="testimonial img">
+              <p class="testi-name">Bhanu Prakash</p>
+              <p class="testi-company">Linkedln.com</p>
+              <p class="testi-text">From query to delivery, Acko’s quick Turnaround Time made sure my experience was completely hassle-free!</p>
             </div>
             <!-- single slide -->
             <div class="testimonial-single-slide">
-              <img class="testi-avatar" src="assets/images/testi3.jpg" alt="testimonial img">
-              <p class="testi-name">Alexander</p>
-              <p class="testi-company">Twitter.com</p>
-              <p class="testi-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry ue ipsa</p>
-            </div>
-            <!-- single slide -->
-            <div class="testimonial-single-slide">
-              <img class="testi-avatar" src="assets/images/testi2.jpg" alt="testimonial img">
-              <p class="testi-name">Victoria</p>
+              <img class="testi-avatar" src="assets/images/gopa_vasanth.jpg" alt="testimonial img">
+              <p class="testi-name">Gopa Vasanth</p>
               <p class="testi-company">Facebook.com</p>
-              <p class="testi-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry ue ipsa</p>
+              <p class="testi-text">Man best insurance I have ever had. When we claim the insurance the process goes butter smooth. The company itself does everything. The payment process is very fast. I can't believe that this type of company exists.  The premium is also very less when compared to other companies. I just love Acko.</p>
+            </div>
+ <!-- single slide -->
+            <div class="testimonial-single-slide">
+              <img class="testi-avatar" src="assets/images/tharun_ravuri.jpg" alt="testimonial img">
+              <p class="testi-name">Tharun Ravuri</p>
+              <p class="testi-company">Twitter.com</p>
+              <p class="testi-text">Acko’s price was almost 50% less than other insurers for Comprehensive car insurance. Surprised!</p>
+            </div>
+            <!-- single slide -->
+            <div class="testimonial-single-slide">
+              <img class="testi-avatar" src="assets/images/praneeth.jpg" alt="testimonial img">
+              <p class="testi-name">Praneeth Vankayla</p>
+              <p class="testi-company">Facebook.com</p>
+              <p class="testi-text">Even in the Natural and man-made calamities ACKO provided insurance to me. I am very happy to have a friendly relation-ship with ACKO.</p>
             </div>
           </div>
         </div>
