--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -57,7 +57,7 @@
         <li><a href="#header"><i class="fa fa-home"></i><span>Home</span></a></li>
         <li><a href="#features"><i class="fa fa-server"></i><span>Features</span></a></li>
         <li><a href="#howit-works"><i class="fa fa-hourglass"></i><span>How it Works</span></a></li>
-        <li><a href="#statis-table"><i class="fa fa-usd"></i><span>Statistic</span></a></li>
+        <li><a href="#statistic-table"><i class="fa fa-usd"></i><span>Statistic</span></a></li>
         <li><a href="#insurance-table"><i class="fa fa-image"></i><span>insurance-table</span></a></li>
         <li><a href="#testimonial"><i class="fa fa-certificate"></i><span>Testimonials</span></a></li>
         <li><a href="#contact"><i class="fa fa-envelope-o"></i><span>Contact</span></a></li>
@@ -237,7 +237,7 @@
       <div class="col-md-12">
         <div class="statistic-table-content">
           <style>
-.button {
+  .button {
 border-radius: 4px;
 background-color: #f4511e;
 border: none;
