Customised the Insurance plans

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -307,7 +307,7 @@ right: 0;
               <div class="single-plan wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
                 <div class="single-plan-head">
                   <h5>Health Insurance</h5>
-                  <p>Rs25,000/<span>Year</span></p>
+                  <p>Rs.25,000/<span>Year</span></p>
                 </div>
                 <div class="single-plan-content">
                   <ul>
@@ -318,9 +318,6 @@ right: 0;
                     <li id="black">Your health history</li>
                   </ul>
                 </div>
-                <div class="single-plan-bottom">
-                  <a class="signup-btn" href="http://mixdesigns.net">Sign Up</a>
-                </div>
               </div>
             </div>
             <!-- End single plan -->
@@ -329,29 +326,66 @@ right: 0;
               <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
                 <div class="single-plan-head">
                   <h5>Motor Insurance</h5>
-                  <p>5000/<span>year</span></p>
+                  <p>Rs.5000/<span>year</span></p>
                 </div>
                 <div class="single-plan-content">
                   <ul>
                     <li id="black">Value of the Vehicle</li>
                     <li id="black">Make-Model of the vehicle</li>
                     <li id="black">The type of coverage/plan</li>
-                    <li id="black">The value, age of your vehicle</li>
+                    <li id="black">The value and use of your vehicle</li>
                     <li id="black">Your claim history</li>
                   </ul>
-                </div>
-                <div class="single-plan-bottom">
-                  <a class="signup-btn" href="#">Sign Up</a>
                 </div>
               </div>
             </div>
             <!-- End single plan -->
+ <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
+                <div class="single-plan-head">
+                  <h5>LIFE Insurance</h5>
+                  <p>Rs.15000/<span>year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black"> What is your philosophy regarding life insurance?</li>
+                    <li id="black">What prompted your to choose life insurance?</li>
+                    <li id="black">The type of coverage or plan?</li>
+                    <li id="black">Your age and gender</li>
+                    <li id="black">Your life history</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
+
+ <!-- Start single plan -->
+            <div class="col-md-3 col-sm-6">
+              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
+                <div class="single-plan-head">
+                  <h5>TRAVEL Insurance</h5>
+                  <p>Rs.5000/<span>year</span></p>
+                </div>
+                <div class="single-plan-content">
+                  <ul>
+                    <li id="black">What made you to take a Travel Insurance?</li>
+                    <li id="black">Is the policy only for you or for entir family?</li>
+                    <li id="black">The type of coverage/plan</li>
+                    <li id="black">Your age and gender</li>
+                    <li id="black">How about extending your plan to premium?</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <!-- End single plan -->
+
             <!-- Start single plan -->
             <div class="col-md-3 col-sm-6">
               <div class="single-plan feature-price wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
                 <div class="single-plan-head">
                   <h5>Home Insurance</h5>
-                  <p>5000/<span>year</span></p>
+                  <p>Rs.5000/<span>year</span></p>
                 </div>
                 <div class="single-plan-content">
                   <ul>
@@ -362,18 +396,16 @@ right: 0;
                     <li id="black">The sum assured</li>
                   </ul>
                 </div>
-                <div class="single-plan-bottom">
-                  <a class="signup-btn" href="#">Sign Up</a>
-                </div>
               </div>
             </div>
             <!-- End single plan -->
+
             <!-- Start single plan -->
             <div class="col-md-3 col-sm-6">
               <div class="single-plan wow fadeInUp" data-wow-duration="1.25s" data-wow-delay="1.25s">
                 <div class="single-plan-head">
                   <h5>Fire Insurance</h5>
-                  <p>7500/<span>year</span></p>
+                  <p>Rs.7500/<span>year</span></p>
                 </div>
                 <div class="single-plan-content">
                   <ul>
@@ -386,9 +418,6 @@ right: 0;
                     <li id="black">Specific policy</li>
                     <li id="black">Unlimited Support</li>
                   </ul>
-                </div>
-                <div class="single-plan-bottom">
-                  <a class="signup-btn" href="#">Sign Up</a>
                 </div>
               </div>
             </div>
