Revamped Insurance Covered

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -290,144 +290,70 @@ right: 0;
 </section>
 
 
-<section id="insurance-table">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="title-area wow fadeInLeft">
-          <h2 class="title">Insurance <span>Plans</span></h2>
-          <p>Risk is everywhere: When you drive your car to work, when you visit a new country, when you ride your bike to a nearby shop, when there’s a new bug going around in town.</p>
+
+
+<!-- Start screenshot -->
+  <section id="screenshot">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="title-area wow fadeInUp">
+            <h2 class="title">App <span>Screenshots</span></h2>
+            <p> Risk is everywhere: When you drive your car to work, when you visit a new country, when you ride your bike to a nearby shop, when there is a new disease going around in town.</p>
+          </div>
         </div>
-      </div>
-      <div class="col-md-12">
-        <div class="pricing-table-content">
-          <div class="row">
-            <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <div class="single-plan-head">
-                  <h5>Health Insurance</h5>
-                  <p>Rs.25,000/<span>Year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black">Your family health history</li>
-                    <li id="black">The sum assured</li>
-                    <li id="black">The type of coverage/plan</li>
-                    <li id="black">Your age and gender</li>
-                    <li id="black">Your health history</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
-            <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                <div class="single-plan-head">
-                  <h5>Motor Insurance</h5>
-                  <p>Rs.5000/<span>year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black">Value of the Vehicle</li>
-                    <li id="black">Make-Model of the vehicle</li>
-                    <li id="black">The type of coverage/plan</li>
-                    <li id="black">The value and use of your vehicle</li>
-                    <li id="black">Your claim history</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
- <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                <div class="single-plan-head">
-                  <h5>LIFE Insurance</h5>
-                  <p>Rs.15000/<span>year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black"> What is your philosophy regarding life insurance?</li>
-                    <li id="black">What prompted your to choose life insurance?</li>
-                    <li id="black">The type of coverage or plan?</li>
-                    <li id="black">Your age and gender</li>
-                    <li id="black">Your life history</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
-
- <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan wow fadeInUp" data-wow-duration="0.75s" data-wow-delay="0.75s">
-                <div class="single-plan-head">
-                  <h5>TRAVEL Insurance</h5>
-                  <p>Rs.5000/<span>year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black">What made you to take a Travel Insurance?</li>
-                    <li id="black">Is the policy only for you or for entir family?</li>
-                    <li id="black">The type of coverage/plan</li>
-                    <li id="black">Your age and gender</li>
-                    <li id="black">How about extending your plan to premium?</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
-
-            <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan feature-price wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                <div class="single-plan-head">
-                  <h5>Home Insurance</h5>
-                  <p>Rs.5000/<span>year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black">The size of your home</li>
-                    <li id="black">The type of coverage/plan</li>
-                    <li id="black">The age of your home and the systems installed therein</li>
-                    <li id="black">The location of your home</li>
-                    <li id="black">The sum assured</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
-
-            <!-- Start single plan -->
-            <div class="col-md-3 col-sm-6">
-              <div class="single-plan wow fadeInUp" data-wow-duration="1.25s" data-wow-delay="1.25s">
-                <div class="single-plan-head">
-                  <h5>Fire Insurance</h5>
-                  <p>Rs.7500/<span>year</span></p>
-                </div>
-                <div class="single-plan-content">
-                  <ul>
-                    <li id="black">replacement,reconstruction,
-                    repair expenses</li>
-
-                    <li id="black">Valued policy</li>
-                    <li id="black">Floating policy</li>
-                    <li id="black">Comprehensive policy</li>
-                    <li id="black">Specific policy</li>
-                    <li id="black">Unlimited Support</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <!-- End single plan -->
+        <div class="col-md-12">
+          <div class="screenshots-area">
+            <ul class="screenshots-slide">
+              <li class="col-md-3 wow fadeInLeft">
+               <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Fire Insurance.jpg"><img src="assets/images/Fire Insurance.jpg" alt="Fire Insurance">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+               <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Health Insurance.jpg"><img src="assets/images/Health Insurance.jpg" alt="Health Insurance">
+                    <div class="view-btn-area">
+                      <span class="fa fa-search view-btn"></span>
+                    </div>
+                 </a>
+              </li>
+               <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Home Insurance.jpg"><img src="assets/images/Home Insurance.jpg" alt="Home Insurance">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+               <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Life Insurance.jpg"><img src="assets/images/Life Insurance.jpg" alt="Life Insurance">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+              <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Motor Insurance.jpg"><img src="assets/images/Motor Insurance.jpg" alt="MOTOR Insurance">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+               <li class="col-md-3 wow fadeInLeft">
+                 <a class="fancybox" data-fancybox-group="gallery" href="assets/images/Travel Insurance.jpg"><img src="assets/images/Travel Insurance.jpg" alt="Travel Insurance">
+                  <div class="view-btn-area">
+                    <span class="fa fa-search view-btn"></span>
+                  </div>
+               </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
+  <!-- End screenshot -->
 
   <!-- Start testimonial -->
   <section id="testimonial">
