customised Insurance plans

--- a/MarkUps-App-Landy/app-landy/index.html
+++ b/MarkUps-App-Landy/app-landy/index.html
@@ -298,7 +298,7 @@ right: 0;
       <div class="row">
         <div class="col-md-12">
           <div class="title-area wow fadeInUp">
-            <h2 class="title">App <span>Screenshots</span></h2>
+            <h2 class="title">INSURANCE <span>PLANS</span></h2>
             <p> Risk is everywhere: When you drive your car to work, when you visit a new country, when you ride your bike to a nearby shop, when there is a new disease going around in town.</p>
           </div>
         </div>
