--- a/MarkUps-App-Landy/app-landy/stats.html
+++ b/MarkUps-App-Landy/app-landy/stats.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
+
 <body>
 
+<div id="main-stats" align="center">
 <h1>acko statistics</h1>
 
 <div id="input">
@@ -9,7 +12,7 @@
 <form id="form" onsubmit="return false;">
     Type: <input  type="text" id="Type" />
     <h1></h1>
-    Number: <input  type="number" id="Hours_per_day" />
+    Number: <input  type="number" id="Number" />
     <h1></h1>
     <input  type="submit" onclick="input();" />
 </form>
@@ -21,28 +24,28 @@
   var e=6;
 function input() {
     var Type_old = document.getElementById("Type").value;
-    var Hours_per_day_old = document.getElementById("Hours_per_day").value;
+    var Number_old = document.getElementById("Number").value;
     if ( Type_old === 'Life' ){
-      a = parseInt(Hours_per_day_old);
-      alert(Type_old + " " + Hours_per_day_old + " " + a);
+      a = parseInt(Number_old);
+      // alert(Type_old + " " + Number_old + " " + a);
       //   console.log(a);
     }
 
     if ( Type_old === 'Home' ){
-      b = parseInt(Hours_per_day_old);
+      b = parseInt(Number_old);
     }
     if ( Type_old === "Motor" ){
-      c = parseInt(Hours_per_day_old);
+      c = parseInt(Number_old);
     }
     if ( Type_old === "Fire" ){
-      d = parseInt(Hours_per_day_old);
+      d = parseInt(Number_old);
     }
     if ( Type_old === "Travel" ){
-      e = parseInt(Hours_per_day_old);
+      e = parseInt(Number_old);
     }
-    // alert(Type_old + Hours_per_day_old);
-    x = a+10;
-    console.log("X:"+x);
+    // alert(Type_old + Number_old);
+    // x = a+10;
+    // console.log("X:"+x);
     drawChart();
 }
 </script>
@@ -64,14 +67,14 @@ function input() {
     // instantiates the pie chart, passes in the data and
     // draws it.
 
-    console.log("New a value :" + a);
+    // console.log("New a value :" + a);
 
     function drawChart() {
     // Create the data table.
 
     var data = new google.visualization.DataTable();
     data.addColumn('string', 'Type');
-    data.addColumn('number', 'Hours_per_day');
+    data.addColumn('number', 'Number');
     data.addRows([
       ['Life', a],
       ['Home', b],
@@ -79,11 +82,11 @@ function input() {
       ['Fire', d],
       ['Travel', e]
     ]);
-    console.log("Newest:"+a);
+    // console.log("Newest:"+a);
 
     // Set chart options
     var options = {'title':'acko 2017-18 stats',
-                   'width':400,
+                   'width':500,
                    'height':300};
 
     // Instantiate and draw our chart, passing in some options.
@@ -92,6 +95,94 @@ function input() {
   }
   </script></head>
 <body>
-  <div id="chart_div" style="width: 900px; height:500px;"> </div>
+  <div id="chart_div" style="width: 900px; height:300px;"> </div>
 </body>
+</div>
+
+<!-- Health Statistics -->
+<style>
+.health-stats{
+    /* top:5px */
+    right:50%; /* Positions 50% from right (right edge will be at center) */
+    margin-left: 100px; /* Positions 200px to the left of center */
+}
+</style>
+<div class="health-stats" >
+  <div id="input_2">
+  <!-- #Input Code -->
+  <h1>acko health-stats</h1>
+  <form id="form" onsubmit="return false;">
+      Year: <input  type="string" id="Type_2" />
+      <h1></h1>
+      Number: <input  type="number" id="Number_2" />
+      <h1></h1>
+      <input  type="submit" onclick="input_2();" />
+      <h1></h1>
+  </form>
+  <script>
+    var x=20; //2016
+    var y=5; //2017
+    var z=10; //2018
+  function input_2() {
+      var Type_2_old = document.getElementById("Type_2").value;
+      var Number_2_old = document.getElementById("Number_2").value;
+
+        if( Type_2_old === "2016" ){
+          x = parseInt(Number_2_old); //2016
+        }
+        if( Type_2_old === "2017" ){
+          y = parseInt(Number_2_old); //2017
+        }
+        if( Type_2_old === "2018" ){
+          z = parseInt(Number_2_old); //2018
+        }
+
+      drawChart_2();
+  }
+  </script>
+  </div>
+
+  </body>
+
+  <head>
+    <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
+    <script type="text/javascript">
+
+      // Load the Visualization API and the piechart package.
+      google.charts.load('current', {'packages':['bar']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart_2);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+
+      function drawChart_2() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Visitations', { role: 'style' } ],
+        ['2016', x, 'color: gray'],
+        ['2017', y, 'color: #76A7FA'],
+        ['2018', z, 'opacity: 0.2'],
+      ]);
+
+      // Set chart options
+      var options = {'title':'acko health stats',
+                     'width':400,
+                     'height':300};
+
+      // Instantiate and draw our chart, passing in some options.
+         var chart = new google.charts.Bar(document.getElementById('chart_div_2'));
+      chart.draw(data, options);
+    }
+    </script></head>
+  <body>
+    <div id="chart_div_2" style="width: 900px; height:500px;"> </div>
+  </body>
+
+</div>
+
+<!-- Motor_Stats -->
+
+
 </html>
