--- a/MarkUps-App-Landy/app-landy/stats.html
+++ b/MarkUps-App-Landy/app-landy/stats.html
@@ -107,6 +107,7 @@ function input() {
     margin-left: 100px; /* Positions 200px to the left of center */
 }
 </style>
+
 <div class="health-stats" >
   <div id="input_2">
   <!-- #Input Code -->
@@ -154,7 +155,7 @@ function input() {
       // Set a callback to run when the Google Visualization API is loaded.
       google.charts.setOnLoadCallback(drawChart_2);
 
-      // Callback that creates and populates a data table,
+// Callback that creates and populates a data table,
       // instantiates the pie chart, passes in the data and
       // draws it.
 
@@ -183,6 +184,233 @@ function input() {
 </div>
 
 <!-- Motor_Stats -->
+<style>
+.Motor_Stats {
+  left:50%;
+  margin-right: 100px;
+}
+</style>
+<div class="Motor_Stats">
+  <h1>acko Motor-Stats</h1>
+<div id="input_3">
+<!-- #Input Code -->
+<form id="form" onsubmit="return false;">
+    Vechicle Type: <input  type="text" id="Type_3" />
+    <h1></h1>
+    Year: <input  type="text" id="Year_3" />
+    <h1></h1>
+    Number: <input  type="number" id="Number_3" />
+    <h1></h1>
+    <input  type="submit" onclick="input_3();" />
+</form>
+<script>
 
+  var car_2018 =3,car_2017=4, car_2016=5, bike_2016=4, bike_2017=6, bike_2018=7;
+function input_3() {
+    var Type_3_old = document.getElementById("Type_3").value;
+    var Year_3_old = document.getElementById("Year_3").value;
+    var Number_3_old = document.getElementById("Number_3").value;
+    if (Year_3_old === "2016"){
+      if ( Type_3_old === 'car' ){
+        car_2016 = parseInt(Number_3_old);
+      }
+
+      if ( Type_3_old === 'bike' ){
+        bike_2016 = parseInt(Number_3_old);
+      }
+    }
+    if (Year_3_old === "2017"){
+      if ( Type_3_old === 'car' ){
+        car_2016 = parseInt(Number_3_old);
+      }
+
+      if ( Type_3_old === 'bike' ){
+        car_2017 = parseInt(Number_3_old);
+      }
+    }
+    if (Year_3_old === "2018"){
+      if ( Type_3_old === 'car' ){
+        car_2018 = parseInt(Number_3_old);
+      }
+
+      if ( Type_3_old === 'bike' ){
+        bike_2018 = parseInt(Number_3_old);
+      }
+    }
+
+    drawChart_3();
+}
+</script>
+</div>
+
+</body>
+
+<script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart_3);
+
+      function drawChart_3() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Number_3', 'Type_3'],
+          ['2016',  car_2016,    bike_2016],
+          ['2017',  car_2017,    bike_2017],
+          ['2018',  car_2018,    bike_2018]
+        ]);
+
+        var options = {
+          title: 'Company Performance',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart_3'));
+
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+    <div id="curve_chart_3" style="width: 900px; height: 500px"></div>
+  </body>
+</div>
+
+<div class="travel-stats" >
+  <div id="input_2">
+  <!-- #Input Code -->
+  <h1>acko travel-stats</h1>
+  <form id="form" onsubmit="return false;">
+      Year: <input  type="string" id="Type_4" />
+      <h1></h1>
+      Number: <input  type="number" id="Number_4" />
+      <h1></h1>
+      <input  type="submit" onclick="input_4();" />
+      <h1></h1>
+  </form>
+  <script>
+    var x2=20; //2016
+    var y2=5; //2017
+    var z2=10; //2018
+  function input_2() {
+      var Type_4_old = document.getElementById("Type_4").value;
+      var Number_4_old = document.getElementById("Number_4").value;
+
+        if( Type_4_old === "2016" ){
+          x = parseInt(Number_4_old); //2016
+        }
+        if( Type_4_old === "2017" ){
+          y = parseInt(Number_4_old); //2017
+        }
+        if( Type_4_old === "2018" ){
+          z = parseInt(Number_4_old); //2018
+        }
+
+      drawChart_4();
+  }
+  </script>
+  </div>
+
+  </body>
+
+  <head>
+    <!-- <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> -->
+    <script type="text/javascript">
+
+      // Load the Visualization API and the piechart package.
+      google.charts.load('current', {'packages':['bar']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart_4);
+
+// Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+
+      function drawChart_4() {
+      var data = google.visualization.arrayToDataTable([
+        ['Year', 'Visitations', { role: 'style' } ],
+        ['2016', x2, 'color: gray'],
+        ['2017', y2, 'color: #76A7FA'],
+        ['2018', z2, 'opacity: 0.2'],
+      ]);
+
+      // Set chart options
+      var options = {'title':'acko travel stats',
+                     'width':400,
+                     'height':300};
+
+      // Instantiate and draw our chart, passing in some options.
+         var chart = new google.charts.Bar(document.getElementById('chart_div_4'));
+      chart.draw(data, options);
+    }
+    </script></head>
+  <body>
+    <div id="chart_div_4" style="width: 900px; height:500px;"> </div>
+  </body>
+
+</div>
+
+
+<div class="Acko Fire_Stats">
+  <h1>acko Fire-Stats</h1>
+<div id="input_5">
+<!-- #Input Code -->
+<form id="form" onsubmit="return false;">
+    Insurance: <input  type="text" id="Type_5" />
+    <h1></h1>
+    Year: <input  type="text" id="Year_5" />
+    <h1></h1>
+    <input  type="submit" onclick="input_5();" />
+</form>
+<script>
+
+  var fire_2018 =3,fire_2017=4, fire_2016=5;
+function input_5() {
+    var Type_5_old = document.getElementById("Type_5").value;
+    var Year_5_old = document.getElementById("Year_5").value;
+    if (Year_5_old === "2016"){
+        fire_2016 = parseInt(Type_5_old);
+    }
+    if (Year_5_old === "2017"){
+        fire_2017 = parseInt(Type_5_old);
+    }
+    if (Year_5_old === "2018"){
+        fire_2018 = parseInt(Type_5_old);
+    }
+
+    drawChart_5();
+}
+</script>
+</div>
+
+</body>
+
+<script type="text/javascript">
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart_5);
+
+      function drawChart_5() {
+        var data = google.visualization.arrayToDataTable([
+          ['Year', 'Type_5'],
+          ['2016',  fire_2016],
+          ['2017',  fire_2017],
+          ['2018',  fire_2018]
+        ]);
+
+        var options = {
+          title: 'Company Performance',
+          curveType: 'function',
+          legend: { position: 'bottom' }
+        };
+
+        var chart = new google.visualization.LineChart(document.getElementById('curve_chart_5'));
+
+        chart.draw(data, options);
+      }
+    </script>
+  </head>
+  <body>
+    <div id="curve_chart_5" style="width: 900px; height: 500px"></div>
+  </body>
+</div>
 
 </html>
